Prepare for deploy

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "generate:gh-pages": "DEPLOY_ENV=GH_PAGES nuxt generate",
+    "deploy": "npm run generate:gh-pages && npx gh-pages -d dist"
   },
   "dependencies": {
     "nuxt": "^2.0.0",
